# binhexgenerator

./: README.md  pyproject.toml
src/binhexgenerator/: binhexgenerator.py
tests/: test_bihex.py
